--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
@@ -233,6 +233,8 @@ spec:
             send_service_user_token: true
           coordination:
             backend_url: 'etcd3+http://etcd:2379'
+          workarounds:
+            disable_fallback_pcpu_query: true
         ssh_private: 'COMPUTE TEST SSH PRIVATE KEY
 
           '
