--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf.yaml
@@ -145,6 +145,7 @@ spec:
             live_migration_wait_for_vif_plug: false
           workarounds:
             skip_migration_revert_events: true
+            disable_fallback_pcpu_query: true
           os_vif_contrail_vrouter:
             vrouter_port: vrouter_port0
           coordination:
