--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -146,6 +146,8 @@ spec:
             enable_certificate_validation: true
           coordination:
             backend_url: 'etcd3+http://etcd:2379'
+          workarounds:
+            disable_fallback_pcpu_query: true
         nova_ironic:
           DEFAULT:
             compute_driver: ironic.IronicDriver
