--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
@@ -143,6 +143,8 @@ spec:
             send_service_user_token: true
           coordination:
             backend_url: 'etcd3+http://etcd:2379'
+          workarounds:
+            disable_fallback_pcpu_query: true
         nova_ironic:
           DEFAULT:
             compute_driver: ironic.IronicDriver
