--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf_adv.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf_adv.yaml
@@ -159,6 +159,7 @@ spec:
           compute:
             live_migration_wait_for_vif_plug: false
           workarounds:
+            disable_fallback_pcpu_query: true
             skip_migration_revert_events: true
           os_vif_contrail_vrouter:
             vrouter_port: vrouter_port0
