Add core preset
The preset enables minimal set of services by default
* keystone
* glance
* cinder
* nova
* horizon
* neutron

Related-Prod: PRODX-46241
Change-Id: I1952e5f84c48733dae6b3c944fa6801870dc938c

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -45,6 +45,7 @@ properties:
     enum:
       - compute
       - compute-tf
+      - core
   size:
     description: timeout and sizing parameters
     type: string
