--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -374,6 +374,7 @@ spec:
         job_barbican_cert_init: true
         ceph_conf: true
         job_clean: false
+        pvc_images: false
       pod:
         replicas:
           api: 1
@@ -381,6 +382,3 @@ spec:
       secrets:
         rbd: glance-rbd-keyring
       storage: rbd
-      volume:
-        class_name: rook-ceph-block
-        size: 2Gi
