--- a/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
@@ -311,6 +311,7 @@ spec:
         secret_ca_bundle: true
         ceph_conf: true
         job_clean: false
+        pvc_images: false
       pod:
         replicas:
           api: 1
