--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
@@ -311,6 +311,7 @@ spec:
         secret_ca_bundle: true
         ceph_conf: true
         job_clean: false
+        pvc_images: false
       pod:
         replicas:
           api: 1
@@ -318,6 +319,3 @@ spec:
       secrets:
         rbd: glance-rbd-keyring
       storage: rbd
-      volume:
-        class_name: rook-ceph-block
-        size: 2Gi
