--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_policies.yaml
@@ -312,6 +312,7 @@ spec:
         secret_ca_bundle: true
         ceph_conf: true
         job_clean: false
+        pvc_images: false
       pod:
         replicas:
           api: 1
@@ -319,6 +320,3 @@ spec:
       secrets:
         rbd: glance-rbd-keyring
       storage: rbd
-      volume:
-        class_name: rook-ceph-block
-        size: 2Gi
