Pass custom cpu type in node overrides
the value was taken from wrong place

Closes-Issue: PRODX-3456
Change-Id: I6daad7f9a9ea7d8dffebc497e9c3a0c145452cf8
(cherry picked from commit eb4dc7022c0203b84fd2967bca4e23ba065f0568)

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -380,10 +380,10 @@ spec:
                       cpu_mode: {{ nova_override.vcpu_type }}
       {%- elif nova_override.get("vcpu_type") and spec.openstack_version in ("queens", "rocky", "stein") %}
                       cpu_mode: custom
-                      cpu_model: {{ vcpu_type }}
+                      cpu_model: {{ nova_override.vcpu_type }}
       {%- elif nova_override.get("vcpu_type") %}
                       cpu_mode: custom
-                      cpu_models: {{ vcpu_type }}
+                      cpu_models: {{ nova_override.vcpu_type }}
       {%- endif %}
       {%- if nova_override.get("images", {}).get("backend") %}
         {%- if nova_override.images.backend == 'ceph' %}
