--- a/tests/fixtures/render_service_template/input/ussuri_ceph_lvm_non_dvr_node_specific/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_lvm_non_dvr_node_specific/context_spec.yaml
@@ -59,6 +59,10 @@ nodes:
               enabled: true
               cipher: "foo"
               key_size: 123
+    compute::cpu-custom:
+      features:
+        nova:
+          vcpu_type: model1,model2
 features:
   barbican:
     backends:
