Allow to deploy without block-storage service
* Use correct number of cache replicas in horizon
* Allow to deploy nova without cinder

Related-Prod: PRODX-44076
Change-Id: I4897a0471b63c54cc918de3ccc28f823ffe355d4

--- a/openstack_controller/templates/services/image.yaml
+++ b/openstack_controller/templates/services/image.yaml
@@ -58,7 +58,7 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
-{%- if multi_backends %}
+{%- if 'cinder' in multi_backends %}
           api:
             services:
               - endpoint: internal
