Use service role in stepler for strict_admin
Depends-On: Iab028ca1ec8ab3780b2cb288fa1b62a28cea2e49
Related-Issue: PRODX-46676
Change-Id: I0f1f4d5285f0b91cece757b85aedfdc7c5abf6dc

--- a/openstack_controller/templates/services/stepler.yaml
+++ b/openstack_controller/templates/services/stepler.yaml
@@ -114,6 +114,9 @@ spec:
         skiplist: |
 {% include 'base/_stepler_skiplist.yaml' %}
         stepler_env:
+{%- if spec.features.get("policies", {}).get("strict_admin", {}).get("enabled", False) %}
+          ROLE_ADMIN: service
+%{- endif %}
           HORIZON_TEST_IMAGE_CIRROS: {{ cirros_image_name }}
 {%- set public_network_name = "public" %}
 {%- if spec.features.neutron.get('floating_network', {}).get('enabled', true) %}
