--- a/openstack_controller/templates/services/tempest.yaml
+++ b/openstack_controller/templates/services/tempest.yaml
@@ -159,13 +159,15 @@ spec:
 {%- endif %}
 {%- if OSVer.yoga <= OSVer[spec.openstack_version] %}
 {%- raw %}
-          {{- if not .Values.conf.tempest.DEFAULT.production }}
+          {{- if .Values.conf.tempest.service_available.designate }}
+          {{-   if not .Values.conf.tempest.DEFAULT.production }}
           function ensure_tld_present {
             openstack tld show $i || openstack tld create --name $i --description tempest-tests
           }
           for i in {{ .Values.conf.tempest.dns.tld_suffix }} "arpa" "in-addr.arpa"; do
             ensure_tld_present $i
           done
+          {{-   end }}
           {{- end }}
 {%- endraw %}
 {%- endif %}
