--- a/openstack_controller/templates/services/stepler.yaml
+++ b/openstack_controller/templates/services/stepler.yaml
@@ -116,7 +116,7 @@ spec:
         stepler_env:
 {%- if spec.features.get("policies", {}).get("strict_admin", {}).get("enabled", False) %}
           ROLE_ADMIN: service
-%{- endif %}
+{%- endif %}
           HORIZON_TEST_IMAGE_CIRROS: {{ cirros_image_name }}
 {%- set public_network_name = "public" %}
 {%- if spec.features.neutron.get('floating_network', {}).get('enabled', true) %}
