[Tempest][caracal] Define cirros user for Cirros image
By default tempest uses image_alt_ssh_user=root which is not suitable for cirros images

Fixes-Bug: PRODX-43715
Change-Id: Ie6eaeddb26b3338b0c78e31427090c52aa7d267b

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -358,6 +358,8 @@ services:
             validation:
               image_ssh_password: gocubsgo
               image_ssh_user: cirros
+              image_alt_ssh_password: gocubsgo
+              image_alt_ssh_user: cirros
             network:
               shared_physical_network: false
               floating_network_name: public
