--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -371,6 +371,8 @@ services:
             validation:
               image_ssh_password: gocubsgo
               image_ssh_user: cirros
+              image_alt_ssh_password: gocubsgo
+              image_alt_ssh_user: cirros
             {%- if ironic_enabled %}
               ssh_timeout: 420
               connect_timeout: 90
