Support Message of the Day in Horizon
spec.features.horizon.motd map (with sctrict schema) is used
to supply required info for the helm chart, in the same structured
form the chart expects.

Depends-On: Id4f2f287a499df7dee4a8b049154628714eed10a
Closes-Issue: PRODX-46838
Change-Id: I13edb28d2b47cf306b13898d3932d9fce08a674b

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -891,6 +891,33 @@ properties:
                 description:
                   type: string
                   description: Theme description showed to user
+          motd:
+            type: object
+            description: Message of the Day files to show to users
+            additionalProperties: false
+            patternProperties:
+              ".*":
+                type: object
+                additionalProperties: false
+                required:
+                - level
+                - message
+                properties:
+                  level:
+                    type: string
+                    enum:
+                    - success
+                    - info
+                    - warning
+                    - error
+                  message:
+                    type: string
+                  beforeLogin:
+                    type: boolean
+                    default: false
+                  afterLogin:
+                    type: boolean
+                    default: true
       keystone:
         type: object
         additionalProperties: false
