--- a/tests/fixtures/render_service_template/input/antelope_ceph_local_non_dvr_keystone_federation/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/antelope_ceph_local_non_dvr_keystone_federation/context_spec.yaml
@@ -11,6 +11,13 @@ features:
   database:
     local_volumes:
       enabled: true
+  horizon:
+    motd:
+      test:
+        level: info
+        message: test
+        afterLogin: true
+        beforeLogin: false
   messaging:
     components_with_dedicated_messaging:
     - networking
