Enable built in telemetry in rabbitmq
Related-Prod: PRODX-46754
Change-Id: Id6a6422ea1e3d0e221b4d568a334d304cdbb7739

--- a/openstack_controller/templates/base/network_policies/messaging.yaml
+++ b/openstack_controller/templates/base/network_policies/messaging.yaml
@@ -18,7 +18,7 @@
               - from:
 {{ from_all(service_childs[rabbitmq_server].get_np_ports(["amqp", "amqp-tls"])) | indent(16) }}
               - from:
-{{ from_namespaces(lma_ns_list) | indent(16) }}
+{{ from_namespaces(lma_ns_list, service_childs[rabbitmq_server].get_np_ports(["metrics"])) | indent(16) }}
         exporter:
           spec:
             podSelector:
