--- a/openstack_controller/templates/child_objects/messaging.yaml
+++ b/openstack_controller/templates/child_objects/messaging.yaml
@@ -55,3 +55,6 @@ rabbitmq:
       - port: 25672
         name: clustering
         protocol: TCP
+      - port: 15692
+        name: metrics
+        protocol: TCP
