--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -429,6 +429,9 @@ rabbitmq:
       - port: 25672
         name: clustering
         protocol: TCP
+      - port: 15692
+        name: metrics
+        protocol: TCP
   Job:
     openstack-neutron-rabbitmq-cluster-wait:
       hash_fields:
