Add initial playbooks to deploy k-2s and openstack controller
Add ansible playbooks to deploy single node cluster with k0s and
minimal openstack configuration.

Related-Prod: PRODX-47105
Change-Id: I458947a8158bc1d5a9d4a1fa699d3e896f763387

--- a/.gitignore
+++ b/.gitignore
@@ -117,4 +117,5 @@ charts/openstack/*/charts
 charts/infra/*/charts
 charts/openstack/*/requirements.lock
 charts/infra/*/requirements.lock
+virtual_lab/ansible/inventory/artifacts/
 
