--- a/virtual_lab/ansible/k0s-install.yaml
+++ b/virtual_lab/ansible/k0s-install.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install k0s controllers
-  hosts: controllers
+  hosts: k8s_controllers:k8s_workers
   gather_facts: true
   become: true
   remote_user: ubuntu
@@ -8,17 +8,8 @@
     - name: Set facts
       set_fact:
         k0s_cluster_nodes:
-          initial_controller: "{{ groups.k0s_controllers[0] }}"
-          controllers: []
-          workers: []
+          initial_controller: "{{ groups.k8s_controllers[0] }}"
+          controllers: "{{ groups.k8s_controllers[1:] }}"
+          workers: "{{ groups.k8s_workers }}"
   roles:
-    - role: bodsch.k0s
-      tags:
-        - k0s_prepare
-        - k0s_download
-        - k0s_install
-        - k0s_configure
-        - k0s_initial_controller
-        - k0s_controller
-        - k0s_service
-        - k0s_finalize
+    - role: k0s
