--- a/virtual_lab/ansible/oc-install.yaml
+++ b/virtual_lab/ansible/oc-install.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Setup ansible dependencies
-  hosts: controllers[0]
+  hosts: k8s_controllers[0]
   become: true
   become_user: root
   tasks:
@@ -16,17 +16,22 @@
   pre_tasks:
     - name: Set node role fact
       set_fact:
-        oc_k8s_controller_node: "{%- if ansible_hostname in groups.controllers %}True{%- endif %}"
-        oc_k8s_compute_node: "{%- if ansible_hostname in groups.computes %}True{%- endif %}"
+        oc_controller_node: "{%- if ansible_hostname in groups.controllers %}True{%- endif %}"
+        oc_compute_node: "{%- if ansible_hostname in groups.computes %}True{%- endif %}"
     - name: Setup networking
       include_role:
         name: oc
         tasks_from: network
 
 - name: Deploy initial controllers
-  hosts: controllers[0]
+  hosts: k8s_controllers[0]
   become: true
   become_user: root
+  pre_tasks:
+    - name: Set node role fact
+      set_fact:
+        oc_controller_node: "{%- if ansible_hostname in groups.controllers %}True{%- endif %}"
+        oc_compute_node: "{%- if ansible_hostname in groups.computes %}True{%- endif %}"
   tasks:
   - name: Initialize clients
     include_role:
