[virtual_lab] Add terrafor templates
Related-Prod: PRODX-47105
Change-Id: I5f404117e5ef014a5d37524f84ab5a9fecea14e0

--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,6 @@ charts/infra/*/charts
 charts/openstack/*/requirements.lock
 charts/infra/*/requirements.lock
 virtual_lab/ansible/inventory/artifacts/
+virtual_lab/terraform/.terraform/
+virtual_lab/terraform/.terraform.lock.hcl
 
