[ingress] Create dedicated service for UDP balancing
There might be required to setup balancing for same port
TCP and UDP like DNS, in this case its required to have
two dedicated services.

Related-Prod: PRODX-47129
Change-Id: I64b12d38031c2f89f5bc67da436bbf33bd7ceefa

--- a/charts/infra/ingress/templates/deployment-ingress.yaml
+++ b/charts/infra/ingress/templates/deployment-ingress.yaml
@@ -421,6 +421,18 @@ spec:
             {{- if .Values.network.host_namespace }}
               hostPort: {{ tuple "ingress" "internal" "server" . | include "helm-toolkit.endpoints.endpoint_port_lookup" }}
             {{- end }}
+            {{- if not (empty $envAll.Values.conf.services.tcp) }}
+            {{range $key, $value := $envAll.Values.conf.services.tcp -}}
+            - containerPort: {{ $key }}
+              protocol: TCP
+            {{ end -}}
+            {{- end }}
+            {{- if not (empty .Values.conf.services.udp) }}
+            {{range $key, $value := .Values.conf.services.udp -}}
+            - containerPort: {{ $key }}
+              protocol: UDP
+            {{ end -}}
+            {{- end }}
           command:
             - /tmp/ingress-controller.sh
             - start
