--- a/charts/infra/ingress/values.yaml
+++ b/charts/infra/ingress/values.yaml
@@ -86,6 +86,9 @@ pod:
       pod:
         runAsUser: 65534
         runAsNonRoot: true
+        sysctls:
+        - name: net.ipv4.ip_unprivileged_port_start
+          value: "0"
       container:
         ingress_vip_kernel_modules:
           capabilities:
